[package]
name = "rdb"
version = "0.1.0"
edition = "2021"

[dependencies]
sled.workspace = true
serde.workspace = true
ciborium.workspace = true
anyhow.workspace = true
schemars.workspace = true
serde_json.workspace = true
thiserror.workspace = true
slog.workspace = true
slog-bunyan.workspace = true
slog-async.workspace = true
mg-common.workspace = true
itertools.workspace = true
chrono.workspace = true
