[package]
name = "rdb"
version = "0.1.0"
edition = "2024"

[dependencies]
sled.workspace = true
serde.workspace = true
ciborium.workspace = true
anyhow.workspace = true
schemars.workspace = true
serde_json.workspace = true
thiserror.workspace = true
slog.workspace = true
mg-common.workspace = true
itertools.workspace = true
chrono.workspace = true
clap = { workspace = true, optional = true }
oxnet.workspace = true

[dev-dependencies]
proptest.workspace = true

[features]
clap = ["dep:clap"]
