[package]
name = "rdb"
version = "0.1.0"
edition = "2024"

[dependencies]
client-common.workspace = true
sled.workspace = true
serde.workspace = true
ciborium.workspace = true
anyhow.workspace = true
schemars.workspace = true
serde_json.workspace = true
thiserror.workspace = true
slog.workspace = true
mg-common.workspace = true
itertools.workspace = true
chrono.workspace = true
clap = { workspace = true, optional = true }
oxnet.workspace = true
mg-api-types = { workspace = true, features = ["clap"] }
poptrie.workspace = true
ndp.workspace = true

[dev-dependencies]
mg-api-types = { workspace = true, features = ["clap", "proptest"] }
proptest.workspace = true
mg-api-types-versions.workspace = true

[features]
clap = ["dep:clap"]
