[package]
name = "rift"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dropshot = { git = "https://github.com/oxidecomputer/dropshot" }
platform = { path = "../platform" }
rift_protocol = { path = "../rift_protocol" }
icmpv6 = { path = "../icmpv6" }
thiserror = "1.0"
slog = "2.7"
slog-term = "2.7"
slog-async = "2.7"
schemars = { version = "0.8.0", features = [ "uuid" ] }
serde = "1.0"
tokio = { version = "1.0", features = ["full"] }
bus = "2"
hostname = "0.3"
